--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "author": "uzbekdev",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
+        "http-errors": "^2.0.0",
+        "joi": "^17.6.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongo": "^0.1.0",
+        "mongoose": "^6.4.2",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.16",
         "pug": "^3.0.2",
         "uuid": "^8.3.2"
